# LibCMaker_STLCache

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  cmr_build_stlcache.cmake  lib_cmaker_stlcache.cmake
ci/: ci_lib_params.sh
cmake/: FindSTLCache.cmake  cmr_build_rules_stlcache.cmake  cmr_find_package_stlcache.cmake  cmr_get_download_params_stlcache.cmake
cmake/modules/: FindSTLCache.cmake  cmr_build_rules_stlcache.cmake  cmr_stlcache_cmaker.cmake  cmr_stlcache_get_download_params.cmake
cmake/modules/stlcache-0.2.20180405/: CMakeLists.txt
example/TestCompileWithSTLCache/: .gitignore  CMakeLists.txt  example.cpp
patch/stlcache-0.2.20180405/: CMakeLists.txt
patch/stlcache-0.2.20180405/include/stlcache/: exceptions.hpp  policy_lru.hpp  stlcache.hpp
samples/TestCompileWithSTLCache/: CMakeLists.txt  README.md
samples/TestCompileWithSTLCache/src/: example.cpp  example_test.cpp
samples/TestCompileWithSTLCache/test/: CMakeLists.txt
samples/ci_sample/: CMakeLists.txt
samples/ci_sample/src/: example.cpp  example_test.cpp
samples/ci_sample/test/: CMakeLists.txt
